--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -279,6 +279,8 @@ form, [role="form"] {
                     position: relative;
                     margin-left: -1.4rem;
 
+                    vertical-align: text-top;
+                    margin-top: 0.1rem;
                     width: 1rem;
                     height: 1rem;
                     margin-right: 0.4rem;
