--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1131,12 +1131,14 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"], [ro
   display: inline-block;
   position: relative;
   margin-left: -1.4rem;
+  vertical-align: text-top;
+  margin-top: 0.1rem;
   width: 1rem;
   height: 1rem;
   margin-right: 0.4rem;
 }
 
-/* line 286, styleguide/scss/core/_core-forms.scss */
+/* line 288, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 fieldset[disabled] form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1157,7 +1159,7 @@ fieldset[disabled]
   cursor: not-allowed;
 }
 
-/* line 290, styleguide/scss/core/_core-forms.scss */
+/* line 292, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
@@ -1183,7 +1185,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], 
 }
 
 @media screen and (min-width: 50em) {
-  /* line 290, styleguide/scss/core/_core-forms.scss */
+  /* line 292, styleguide/scss/core/_core-forms.scss */
   form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
   form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
   form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
@@ -1193,7 +1195,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], 
   }
 }
 
-/* line 320, styleguide/scss/core/_core-forms.scss */
+/* line 322, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
@@ -1203,7 +1205,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:c
   border: none;
 }
 
-/* line 331, styleguide/scss/core/_core-forms.scss */
+/* line 333, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1220,7 +1222,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"][d
   cursor: not-allowed;
 }
 
-/* line 340, styleguide/scss/core/_core-forms.scss */
+/* line 342, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="file"], [role="form"] fieldset [role="file"] {
   display: inline-block;
   min-width: 50%;
@@ -1231,13 +1233,13 @@ form fieldset [role="file"], [role="form"] fieldset [role="file"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 340, styleguide/scss/core/_core-forms.scss */
+  /* line 342, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="file"], [role="form"] fieldset [role="file"] {
     border-width: 0.08rem;
   }
 }
 
-/* line 359, styleguide/scss/core/_core-forms.scss */
+/* line 361, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
   display: inline-block;
   min-width: 50%;
@@ -1254,25 +1256,25 @@ form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 359, styleguide/scss/core/_core-forms.scss */
+  /* line 361, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
     border-width: 0.08rem;
   }
 }
 
-/* line 383, styleguide/scss/core/_core-forms.scss */
+/* line 385, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"][multiple], [role="form"] fieldset [role="listbox"][multiple] {
   background: none;
   padding: 0;
   overflow: hidden;
 }
 
-/* line 390, styleguide/scss/core/_core-forms.scss */
+/* line 392, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   display: none;
 }
 
-/* line 395, styleguide/scss/core/_core-forms.scss */
+/* line 397, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] select {
   width: 100%;
   max-width: 100%;
@@ -1289,24 +1291,24 @@ form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] s
   color: #2b303a;
 }
 
-/* line 415, styleguide/scss/core/_core-forms.scss */
+/* line 417, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select:focus, [role="form"] fieldset [role="listbox"] select:focus {
   outline: none;
 }
 
-/* line 421, styleguide/scss/core/_core-forms.scss */
+/* line 423, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   background-color: transparent;
   border: 0;
 }
 
-/* line 427, styleguide/scss/core/_core-forms.scss */
+/* line 429, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple], [role="form"] fieldset [role="listbox"] select[multiple] {
   padding-right: 0;
   height: auto;
 }
 
-/* line 432, styleguide/scss/core/_core-forms.scss */
+/* line 434, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [role="listbox"] select[multiple] option {
   padding: 0.5rem 0.75rem;
   min-height: 1.5rem;
@@ -1314,60 +1316,60 @@ form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [
   border-radius: 0.15rem;
 }
 
-/* line 443, styleguide/scss/core/_core-forms.scss */
+/* line 445, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"], [role="form"] fieldset ul[role="listbox"] {
   padding: 0;
   border: none;
   background: none;
 }
 
-/* line 452, styleguide/scss/core/_core-forms.scss */
+/* line 454, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label, form fieldset .has-error label, [role="form"] fieldset[error] label, [role="form"] fieldset .has-error label {
   color: #b94a48;
 }
 
-/* line 456, styleguide/scss/core/_core-forms.scss */
+/* line 458, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error, form fieldset .has-error label span.field-validation-error, [role="form"] fieldset[error] label span.field-validation-error, [role="form"] fieldset .has-error label span.field-validation-error {
   display: inline-block;
   padding-top: 0.75rem;
 }
 
-/* line 461, styleguide/scss/core/_core-forms.scss */
+/* line 463, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error:empty, form fieldset .has-error label span.field-validation-error:empty, [role="form"] fieldset[error] label span.field-validation-error:empty, [role="form"] fieldset .has-error label span.field-validation-error:empty {
   display: none;
 }
 
-/* line 468, styleguide/scss/core/_core-forms.scss */
+/* line 470, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper, form fieldset[error] .input-field-wrapper, form fieldset[error] .textarea-field-wrapper, form fieldset .has-error .select-field-wrapper, form fieldset .has-error .input-field-wrapper, form fieldset .has-error .textarea-field-wrapper, [role="form"] fieldset[error] .select-field-wrapper, [role="form"] fieldset[error] .input-field-wrapper, [role="form"] fieldset[error] .textarea-field-wrapper, [role="form"] fieldset .has-error .select-field-wrapper, [role="form"] fieldset .has-error .input-field-wrapper, [role="form"] fieldset .has-error .textarea-field-wrapper {
   border-color: #b94a48;
 }
 
-/* line 472, styleguide/scss/core/_core-forms.scss */
+/* line 474, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper input, form fieldset[error] .select-field-wrapper select, form fieldset[error] .select-field-wrapper textarea, form fieldset[error] .input-field-wrapper input, form fieldset[error] .input-field-wrapper select, form fieldset[error] .input-field-wrapper textarea, form fieldset[error] .textarea-field-wrapper input, form fieldset[error] .textarea-field-wrapper select, form fieldset[error] .textarea-field-wrapper textarea, form fieldset .has-error .select-field-wrapper input, form fieldset .has-error .select-field-wrapper select, form fieldset .has-error .select-field-wrapper textarea, form fieldset .has-error .input-field-wrapper input, form fieldset .has-error .input-field-wrapper select, form fieldset .has-error .input-field-wrapper textarea, form fieldset .has-error .textarea-field-wrapper input, form fieldset .has-error .textarea-field-wrapper select, form fieldset .has-error .textarea-field-wrapper textarea, [role="form"] fieldset[error] .select-field-wrapper input, [role="form"] fieldset[error] .select-field-wrapper select, [role="form"] fieldset[error] .select-field-wrapper textarea, [role="form"] fieldset[error] .input-field-wrapper input, [role="form"] fieldset[error] .input-field-wrapper select, [role="form"] fieldset[error] .input-field-wrapper textarea, [role="form"] fieldset[error] .textarea-field-wrapper input, [role="form"] fieldset[error] .textarea-field-wrapper select, [role="form"] fieldset[error] .textarea-field-wrapper textarea, [role="form"] fieldset .has-error .select-field-wrapper input, [role="form"] fieldset .has-error .select-field-wrapper select, [role="form"] fieldset .has-error .select-field-wrapper textarea, [role="form"] fieldset .has-error .input-field-wrapper input, [role="form"] fieldset .has-error .input-field-wrapper select, [role="form"] fieldset .has-error .input-field-wrapper textarea, [role="form"] fieldset .has-error .textarea-field-wrapper input, [role="form"] fieldset .has-error .textarea-field-wrapper select, [role="form"] fieldset .has-error .textarea-field-wrapper textarea {
   color: #b94a48;
 }
 
-/* line 478, styleguide/scss/core/_core-forms.scss */
+/* line 480, styleguide/scss/core/_core-forms.scss */
 form fieldset[error]:empty, form fieldset .has-error:empty, [role="form"] fieldset[error]:empty, [role="form"] fieldset .has-error:empty {
   display: none;
 }
 
-/* line 486, styleguide/scss/core/_core-forms.scss */
+/* line 488, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] label, [role="form"] fieldset[success] label {
   color: #468847;
 }
 
-/* line 491, styleguide/scss/core/_core-forms.scss */
+/* line 493, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper, form fieldset[success] .input-field-wrapper, form fieldset[success] .textarea-field-wrapper, [role="form"] fieldset[success] .select-field-wrapper, [role="form"] fieldset[success] .input-field-wrapper, [role="form"] fieldset[success] .textarea-field-wrapper {
   border-color: #468847;
 }
 
-/* line 495, styleguide/scss/core/_core-forms.scss */
+/* line 497, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper input, form fieldset[success] .select-field-wrapper select, form fieldset[success] .select-field-wrapper textarea, form fieldset[success] .input-field-wrapper input, form fieldset[success] .input-field-wrapper select, form fieldset[success] .input-field-wrapper textarea, form fieldset[success] .textarea-field-wrapper input, form fieldset[success] .textarea-field-wrapper select, form fieldset[success] .textarea-field-wrapper textarea, [role="form"] fieldset[success] .select-field-wrapper input, [role="form"] fieldset[success] .select-field-wrapper select, [role="form"] fieldset[success] .select-field-wrapper textarea, [role="form"] fieldset[success] .input-field-wrapper input, [role="form"] fieldset[success] .input-field-wrapper select, [role="form"] fieldset[success] .input-field-wrapper textarea, [role="form"] fieldset[success] .textarea-field-wrapper input, [role="form"] fieldset[success] .textarea-field-wrapper select, [role="form"] fieldset[success] .textarea-field-wrapper textarea {
   color: #468847;
 }
 
-/* line 503, styleguide/scss/core/_core-forms.scss */
+/* line 505, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled],
 form fieldset [readonly], [role="form"] fieldset [disabled],
 [role="form"] fieldset [readonly] {
@@ -1375,12 +1377,12 @@ form fieldset [readonly], [role="form"] fieldset [disabled],
   opacity: 1;
 }
 
-/* line 510, styleguide/scss/core/_core-forms.scss */
+/* line 512, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled], [role="form"] fieldset [disabled] {
   cursor: not-allowed;
 }
 
-/* line 514, styleguide/scss/core/_core-forms.scss */
+/* line 516, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled] input, form fieldset [disabled] textarea, [role="form"] fieldset [disabled] input, [role="form"] fieldset [disabled] textarea {
   color: #ababab;
   cursor: not-allowed;
