--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -49,186 +49,189 @@ body {
 
         section[role="grid"] {
                         
-            // Grid cell defaults
-            [role="gridcell"] {
+            &[id$="-grid"] {
 
-                p {
-                
-                    padding-top: 0.6672rem;
-                    line-height: 1.3;
+                // Grid sample defaults
+                [role="gridcell"] {
 
-                    @include sf-media($from: tablet-portrait) {
-
-                        padding-top: 0.67rem;
-                    }
-                }
-
-                h3 {
+                    p {
                     
-                    margin-top: 0;
-                }
-                    
-                &:nth-child(1) {
-
-                    @include sf-set-color-scheme (primary);
-                }
-
-                &:nth-child(2) {
-
-                    @include sf-set-color-scheme (secondary);
-                }
-
-                &:nth-child(3) {
-
-                    @include sf-set-color-scheme (tertiary);
-                }
-
-                &:nth-child(4) {
-
-                    @include sf-set-color-scheme (quaternary);
-                }
-
-                &:nth-child(5) {
-
-                    @include sf-set-color-scheme (gold);
-                }
-
-                &:nth-child(6) {
-
-                    @include sf-set-color-scheme (green);
-                }
-
-                &:nth-child(7) {
-
-                    @include sf-set-color-scheme (orange);
-                }
-
-                &:nth-child(8) {
-
-                    @include sf-set-color-scheme (red);
-                }
-
-                > section {
-
-                    padding-top: 0;
-                    padding-bottom: 0;
-
-                    > div {
-
-                        padding: 1.0008rem;
-                        color: sf-get-color(white);
+                        padding-top: 0.6672rem;
+                        line-height: 1.3;
 
                         @include sf-media($from: tablet-portrait) {
 
-                            padding: 1.34rem;
-                        }
-
-                        h3 {
-
-                            color: sf-get-color(white);
-                            font-size: 1.5568rem;
-                            line-height: 1.5568rem;
-
-                            padding-top: 0;
-                            border-bottom: 0;
-                            margin-bottom: 0;
-
-                            @include sf-media($from: tablet-portrait) {
-
-                                font-size: 1.675rem;
-                                line-height: 1.675rem;
-                            }
+                            padding-top: 0.67rem;
                         }
                     }
-                }
-            }
 
-            &#gutterless-grid {
-
-                > [role="gridcell"] {
-
-                    @include sf-set-width (
-                        $from: tablet-portrait,
-                        $width: one-third
-                    );
-
-                    &:nth-child(3), &:nth-child(4), &:nth-child(5) {
-
-                        @include sf-set-width (
-                            $from: tablet-portrait,
-                            $width: one-sixth
-                        );
+                    h3 {
+                        
+                        margin-top: 0;
                     }
-                }
-            }
-
-            &#push-grid {
-
-                > [role="gridcell"] {
-
-                    @include sf-set-width (
-                        $from: tablet-portrait,
-                        $width: one-third
-                    );
-                }
-            }
-
-            &#gutters-push-grid,
-            &#push-grid {
-
-                > [role="gridcell"] {
-
+                        
                     &:nth-child(1) {
 
-                        @include sf-push (
-                            $from: tablet-portrait,
-                            $width: one-sixth);
+                        @include sf-set-color-scheme (primary);
                     }
 
                     &:nth-child(2) {
 
-                        @include sf-push (
-                            $from: tablet-portrait,
-                            $width: one-sixth);
+                        @include sf-set-color-scheme (secondary);
                     }
-                }
-            }
 
-            &#equal-heights-centered-grid {
+                    &:nth-child(3) {
 
-                section {
-
-                    justify-content: flex-start;
-                }
-            }
-
-            &#fully-centered-grid {
-
-                h3, p {
-                    text-align: center;
-                }
-            }
-
-            &#gutters-varied-grid {
-
-                > [role="gridcell"] {
+                        @include sf-set-color-scheme (tertiary);
+                    }
 
                     &:nth-child(4) {
 
-                        @include sf-set-width (
-                            $from: tablet-portrait,
-                            $width: one-half,
-                            $gutter: map-get($grid-gutters, one-third)
-                        );
+                        @include sf-set-color-scheme (quaternary);
                     }
 
-                    &:nth-child(5), &:nth-child(6) {
+                    &:nth-child(5) {
+
+                        @include sf-set-color-scheme (gold);
+                    }
+
+                    &:nth-child(6) {
+
+                        @include sf-set-color-scheme (green);
+                    }
+
+                    &:nth-child(7) {
+
+                        @include sf-set-color-scheme (orange);
+                    }
+
+                    &:nth-child(8) {
+
+                        @include sf-set-color-scheme (red);
+                    }
+
+                    > section {
+
+                        padding-top: 0;
+                        padding-bottom: 0;
+
+                        > div {
+
+                            padding: 1.0008rem;
+                            color: sf-get-color(white);
+
+                            @include sf-media($from: tablet-portrait) {
+
+                                padding: 1.34rem;
+                            }
+
+                            h3 {
+
+                                color: sf-get-color(white);
+                                font-size: 1.5568rem;
+                                line-height: 1.5568rem;
+
+                                padding-top: 0;
+                                border-bottom: 0;
+                                margin-bottom: 0;
+
+                                @include sf-media($from: tablet-portrait) {
+
+                                    font-size: 1.675rem;
+                                    line-height: 1.675rem;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                &#gutterless-grid {
+
+                    > [role="gridcell"] {
 
                         @include sf-set-width (
                             $from: tablet-portrait,
-                            $width: one-quarter,
-                            $gutter: map-get($grid-gutters, one-third)
+                            $width: one-third
                         );
+
+                        &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+
+                            @include sf-set-width (
+                                $from: tablet-portrait,
+                                $width: one-sixth
+                            );
+                        }
+                    }
+                }
+
+                &#push-grid {
+
+                    > [role="gridcell"] {
+
+                        @include sf-set-width (
+                            $from: tablet-portrait,
+                            $width: one-third
+                        );
+                    }
+                }
+
+                &#gutters-push-grid,
+                &#push-grid {
+
+                    > [role="gridcell"] {
+
+                        &:nth-child(1) {
+
+                            @include sf-push (
+                                $from: tablet-portrait,
+                                $width: one-sixth);
+                        }
+
+                        &:nth-child(2) {
+
+                            @include sf-push (
+                                $from: tablet-portrait,
+                                $width: one-sixth);
+                        }
+                    }
+                }
+
+                &#equal-heights-centered-grid {
+
+                    section {
+
+                        justify-content: flex-start;
+                    }
+                }
+
+                &#fully-centered-grid {
+
+                    h3, p {
+                        text-align: center;
+                    }
+                }
+
+                &#gutters-varied-grid {
+
+                    > [role="gridcell"] {
+
+                        &:nth-child(4) {
+
+                            @include sf-set-width (
+                                $from: tablet-portrait,
+                                $width: one-half,
+                                $gutter: map-get($grid-gutters, one-third)
+                            );
+                        }
+
+                        &:nth-child(5), &:nth-child(6) {
+
+                            @include sf-set-width (
+                                $from: tablet-portrait,
+                                $width: one-quarter,
+                                $gutter: map-get($grid-gutters, one-third)
+                            );
+                        }
                     }
                 }
             }
